Browser reset no longer sets heading, p text wrap props.

--- a/Argentini.Sfumato/scss/_browser-reset.scss
+++ b/Argentini.Sfumato/scss/_browser-reset.scss
@@ -63,11 +63,6 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: inherit;
-  text-wrap: pretty;
-}
-
-p {
-  text-wrap: pretty;
 }
 
 // Reset links to optimize for opt-in styling instead of opt-out.
